Bug 97510
unread expanded conv msg indented too much (Chrome)


temporary check in because I messed up the bug number previously. I will fix what I break here on purpose in a subsequent fix so it's the same as in JP, yet has the right annotation/comments for the line with the correct bug.

https://bugzilla.zimbra.com/show_bug.cgi?id=97510

Copied from Perforce
 Change: 535366

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -633,10 +633,10 @@ INPUT[type="text"].search_input-expanded {
 	margin:0px;
 }
 
-.Row.ZmConvExpanded .ZmMsgListColFrom SPAN:first-child,
-.Row.ZmConvExpanded .ZmMsgListColSubject SPAN {
-	margin-left:2em;
-}
+.Row.ZmConvExpanded .ZmMsgListColFrom SPAN:first-child,xx
+.Row.ZmConvExpanded .ZmMsgListColSubject SPAN {xx
+	margin-left:2em;xx
+}xx
 
 /* put space between display of tag icons and their names */
 .Tags A {
